--- a/style.css
+++ b/style.css
@@ -1,144 +1,95 @@
-
-.body {
-    background-color: #600968;
-    color: #b6cbce;
+.centre
+{
+    text-align:center;
+    margin-top:160px;
 }
-
-
-.navbar {
-    background-color: #540c0c;
-    min-height: 20px;
-    width: auto;
-    background: linear-gradient(rgba(32, 166, 184, 0.8), rgba(3, 63, 71, 0.8));
-    background-image: url("./image/sidebar-img.jpg");
-    background-size: cover;
-    background-position: center;
+#backdrop
+{
+    background-image:url(stars.jpg);
+    background-size:cover;
 }
-
-.navbar .nav-link {
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #fff;
+.h1
+{
+    font-size:80px;
+    font-weight:700;
 }
-
-.navbar .nav-link:hover {
-    color: #1dbc0b;
+.h2
+{
+    display:block;
+    background-color:rgb(8, 5, 2);
+    margin-right:300px;
+    margin-left:300px;
+    border-radius:20px;
+    font-size:50px;
+    font-family:cursive;
+    color:rgb(78, 78, 78);
 }
-
-.navbar .nav-link.active {
-    color: var(--color-brand);
+#tb
+{
+    height:50px;
+    max-width:600px;
+    margin:auto;
+    padding:10px;
+    position:center;
 }
-
-.color1 {
-    color: #a8cd15;
-    width: 200px;
-}
-
-.shadow-effect {
-    transition: all 0.5s;
-}
-
-.shadow-effect:hover {
-    box-shadow: -6px 6px 0 0 rgb(10, 44, 238);
-}
-
-
-.size {
-    width: 140px;
-  height: 140px;
-  border-radius: 80px;
-}
-
-.bg-base {
-    background-color: var(--color-base);
-}
-
-
-.full-height {
-    min-height: 100vh;
-    height: 100%;
+.in
+{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    border-bottom: 2px solid rgba(36, 219, 8, 0.1);
-}
-
-.text-brand {
-    color: #e0f780;
-}
-
-
-.btn {
-    padding: 12px 28px;
-    font-weight: 700;
-}
-
-.btn-brand {
-    background-color: #e0f780;
-    border-color: #e0f780;
-    color: #0ad3ed;
-}
-
-.btn-brand:hover,
-.btn-brand:focus {
-    background-color: #340a0a00;
-    color: #eef3db;
-    border-color: #490a0a00;
-}
-
-a {
-    text-decoration: none;
-    color: #b6cbce;
-    transition: all 0.4s ease;
-}
-
-a:hover {
-    color: #b6cbce;
-}
-
-img {
-    width: 400px;
-    height: 300px;
-}
-
-
-.social-icons {
-}
-
-.social-icons a {
-    width: 40px;
-    height: 40px;
-    display: inline-flex;
     align-items: center;
-    justify-content: center;
-    background-color: #02181b;
-    border-radius: 100px;
-    font-size: 24px;
 }
-
-
-
-#contact .form-control {
-    background-color: #033f47;
-    border-color: #033f47;
-    color: #b6cbce;
+input::placeholder
+{
+    font-size:17px;
 }
-
-#contact .form-control:focus {
-    border-color: #e0f780;
-    box-shadow: none;
+.error-message 
+{
+    color:white;
+    text-align:center;
+    max-width:450px;
+    margin-left:100px;
+    margin-right:100px;
+    border-radius:10px;
+    background-color:red;
+    font-size:26px;
 }
-
-#contact .form-control::placeholder {
-    color: #b6cbce;
+input[type="text"] 
+{
+    flex-grow: 1;
+    font-size:20px;
+    padding:15px;
+    border:0px;
+    border-radius:15px;
 }
-
-#contact input.form-control {
-    height: 44px;
+button
+{
+    padding:20px;
+    background-color:black;
+    color: white;
+    font-size:18px;
+    font-variant:small-caps;
+    border:0px;
+    margin-left:5px;
+    cursor:pointer;
+    border-radius:15px;
 }
-
-span{
-    color: #de12cd;
+li
+{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size:20px;
+    font-family: monospace;
+    margin-bottom:10px;
+    padding:15px;
+    background-color: #fff;
+    border-radius:15px;
+}
+li span
+{
+    flex-grow: 1;
+}
+li i 
+{
+    margin-right:15px;
+    cursor: pointer;
 }
